Update backend project
Update gitignore file, add README file, add requirements.txt file, add Django REST framework dependency, add test HTTP response for initial setup, delete unnecessary files from repo, and add Django app "api" to Django project "ventorymgmt"

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,1 +1,12 @@
-# Django files that should not go to Github repo
+# Virtual environment directory
+.venv/
+
+# MacOS metadata files
+.DS_Store
+
+# Byte-compiled/optimized/DLL files
+__pycache__/
+*.py[cod]
+
+# Django specific DB files
+db.sqlite3
